fix css zoom not working on safari - using scale

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -184,7 +184,7 @@
         font-size: 14px;
         font-weight: 400;
         line-height: 20px;
-        max-width: 250px;
+        /* max-width: 250px; */
       }
     }
   }
@@ -419,14 +419,6 @@
           line-height: 36px;
         }
       }
-
-      #subHeroVector {
-        padding-inline-start: 2rem;
-        width: 500px;
-        --top: 40px;
-        --left: 180px;
-        zoom: 0.8;
-      }
     }
   }
 
@@ -474,13 +466,6 @@
           line-height: 24px;
           font-weight: 400;
         }
-      }
-
-      #subHeroVector {
-        width: 300px;
-        --top: -10px;
-        --left: 10px;
-        zoom: 0.45;
       }
     }
   }
@@ -663,7 +648,7 @@
     align-self: center;
     .platform-number {
       max-width: 16rem;
-      min-width: 13rem;
+      min-width: 11rem;
       display: flex;
       padding: 1.375rem 0rem 2.375rem;
       flex-direction: column;
@@ -697,14 +682,28 @@
     }
   }
 
-  @media (max-width: 530px) {
+  @media (max-width: 510px) {
     .platform-numbers-wrapper {
       padding: 0.5rem;
       gap: 0.5rem;
+      .platform-number {
+        min-width: 9rem;
+        padding: 1rem 0 1.5rem;
+        img {
+          width: 50px;
+        }
+
+        .number {
+          font-size: 1.5rem;
+          line-height: 2.25rem;
+        }
+        .number-desc {
+          font-size: 0.875rem;
+          line-height: 1.5rem;
+        }
+      }
     }
-    .platform-number {
-      zoom: 0.7;
-    }
+
     padding-bottom: 4rem;
   }
 }
@@ -716,8 +715,15 @@
 #newsLetter {
   position: absolute;
   top: 0;
-  left: 50%;
-  translate: -50% -50%;
+  left: 0;
+  right: 0;
+  translate: 0 -50%;
+  width: 100%;
+
+  .wrapper {
+    display: flex;
+    justify-content: center;
+  }
 }
 .news-letter {
   width: fit-content;
@@ -739,8 +745,8 @@
   }
 
   @media (max-width: 992px) {
-    zoom: 0.9;
     gap: 0.75rem;
+    scale: 0.9;
     h2 {
       font-size: 24px;
       font-weight: 600;
@@ -751,7 +757,7 @@
   @media (max-width: 768px) {
     flex-wrap: wrap;
     border-radius: 1rem;
-    zoom: 1;
+    scale: 1;
     h2 {
       font-size: 20px;
       font-weight: 600;
@@ -765,7 +771,10 @@
   @media (max-width: 576px) {
     gap: 0.7rem;
     padding: 1rem;
-    zoom: 0.8;
+
+    .input-with-button {
+      scale: 0.75;
+    }
     h2 {
       font-size: 20px;
       font-weight: 600;
@@ -775,7 +784,7 @@
       font-size: 14px;
     }
     img {
-      zoom: 0.4;
+      scale: 0.4;
     }
   }
 }
